--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/molokai"]
 	path = submodules/molokai
 	url = https://github.com/tomasr/molokai.git
+[submodule "submodules/bashmarks"]
+	path = submodules/bashmarks
+	url = https://github.com/huyng/bashmarks.git
