--- a/.gitconfig
+++ b/.gitconfig
@@ -66,8 +66,11 @@
 	clean = git media clean %f
 	smudge = git media smudge %f
 [filter "lfs"]
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
 	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
 [rerere]
 	enabled = true
+[pull]
+	rebase = true
