Update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,12 @@ bind -r L resize-pane -R 5
 
 bind -n C-k clear-history
 
-set -g pane-border-fg white
-set -g pane-active-border-fg cyan
-set -g pane-active-border-bg cyan
+set -g mouse-select-window on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+# set -g mouse on
+
+bind -n S-Left select-pane -L
+bind -n S-Right select-pane -R
+bind -n S-Up select-pane -U
+bind -n S-Down select-pane -D
