--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,12 +3,12 @@ bind -r K resize-pane -U 5
 bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
-bind -n C-k clear-history
+#bind -n C-k clear-history
 
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-# set -g mouse on
+#set -g mouse-select-window on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse on
 
 bind -n S-Left select-pane -L
 bind -n S-Right select-pane -R
