--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,10 +5,9 @@ bind -r L resize-pane -R 5
 
 #bind -n C-k clear-history
 
-#set -g mouse-select-window on
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-#set -g mouse on
+if-shell "if [[ `tmux -V | cut -d' ' -f2` -lt 2.1 ]]; then true; else false; fi" \
+    'set -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on' \
+    'set -g mouse on'
 
 bind -n S-Left select-pane -L
 bind -n S-Right select-pane -R
